Include support for ember rc.3

--- a/sample-rc.3/conf/application.conf
+++ b/sample-rc.3/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="mEo:EQ<]MHNv]AFf8gZRMET>RJLXpk]TLY2hg<kB5D/3NHyahktvacpD<EO_0Db2"
+application.secret="1d[xo6IO>DXgh8QNrIlM84yt?^S9f/>;xkASEe[U3LEX>U>XHtk5[x[?=l1nmATh"
 
 # The application languages
 # ~~~~~
